fastmetrics-derive/tests/ui/fail/encode_label_value/tuple_struct_not_newtype.rs
use fastmetrics_derive::EncodeLabelValue;

// This should fail because only single-field tuple structs are supported.
#[derive(EncodeLabelValue)]
struct InvalidTupleStruct(u16, u16);

fn main() {}
